--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -99,8 +99,8 @@
                       <ion-col text-center style="border-width:1px;border-style: none none none none;color:#4bacc6;font-size:26px;">
                         {{tablevalues.alertvalues.totalmfgcodecount}}
                       </ion-col>
-                      <ion-col col-1 style="color:#4bacc6;border-width:1px;border-style: none none none none;font-size:26px;">
-                        <ion-icon name="md-search"></ion-icon>
+                      <ion-col align-self-center col-1 style="color:#FFF;border-width:1px;border-style: none none none none;font-size:26px;">
+
                       </ion-col>
                   </ion-row>
                   <ion-row style="overflow:hide; height: 50px;border-width:1px;border-style: dotted none dotted none;">
@@ -110,8 +110,8 @@
                       <ion-col text-center style="border-width:1px;border-style: none none none none;color:#4bacc6;font-size:26px;">
                           {{tablevalues.alertvalues.totalunsetpricecount}}
                       </ion-col>
-                      <ion-col col-1 style="color:#4bacc6;border-width:1px;border-style: none none none none;font-size:26px;">
-                        <ion-icon name="md-search"></ion-icon>
+                      <ion-col align-self-center col-1 style="color:#FFF;border-width:1px;border-style: none none none none;font-size:26px;">
+                        <button (click)="OpenDetailForUnTransfer()" style="padding:0%;height:40px !important;" color="colorseries1" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
                       </ion-col>
                   </ion-row>
                   <ion-row style="overflow:hide; height: 50px;border-width:1px;border-style: dotted none dotted none;">
@@ -121,8 +121,8 @@
                       <ion-col text-center style="border-width:1px;border-style: none none none none;color:#4bacc6;font-size:26px;">
                           {{tablevalues.alertvalues.totalunsetpricemny|thousands}}
                       </ion-col>
-                      <ion-col col-1 style="color:#4bacc6;border-width:1px;border-style: none none none none;font-size:26px;">
-                        <ion-icon name="md-search"></ion-icon>
+                      <ion-col align-self-center col-1 style="color:#FFF;border-width:1px;border-style: none none none none;font-size:26px;">
+                        <button (click)="OpenDetailForUnTransfer()" style="padding:0%;height:40px !important;" color="colorseries1" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
                       </ion-col>
                   </ion-row>
                 </ion-grid>    
@@ -134,9 +134,9 @@
                         <ion-col col-5 text-center style="border-width:1px;border-style: none dotted none none;color:#9bbb59;font-size:26px;">类型</ion-col>
                         <ion-col text-center style="border-width:1px;border-style: none dotted none none;color:#9bbb59;font-size:26px;">接单金额</ion-col>
                         <ion-col text-center style="border-width:1px;border-style: none none none none;color:#9bbb59;font-size:26px;">毛利率</ion-col>
-                        <ion-col col-1 style="color:#9bbb59;border-width:1px;border-style: none none none none;font-size:26px;"></ion-col>
+                        <ion-col col-1 style="color:#FFF;border-width:1px;border-style: none none none none;font-size:26px;"></ion-col>
                     </ion-row>
-                    <ion-row style="overflow:hide; height: 50px;border-width:1px;border-style: dotted none dotted none;" *ngFor="let rowdata of tablevalues.groupbykindvalues">
+                    <ion-row style="overflow:hide; height: 50px;border-width:1px;border-style: dotted none dotted none;" *ngFor="let rowdata of tablevalues.groupbykindvalues;index as n;">
                         <ion-col col-5 text-center style="border-width:1px;border-style: none dotted none none;color:#9bbb59;font-size:26px;">
                             {{rowdata.kind}}
                         </ion-col>
@@ -146,9 +146,9 @@
                         <ion-col text-center style="border-width:1px;border-style: none none none none;color:#9bbb59;font-size:26px;">
                             {{rowdata.grossrate|percent}}
                         </ion-col>
-                        <ion-col col-1 style="color:#9bbb59;border-width:1px;border-style: none none none none;font-size:26px;">
-                            <ion-icon name="md-search"></ion-icon>
-                          </ion-col>
+                        <ion-col align-self-center col-1 style="color:#FFF;border-width:1px;border-style: none none none none;font-size:26px;">
+                            <button (click)="OpenDetail(rowdata,n,1)" style="padding:0%;height:40px !important;" color="colorseries2" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
+                        </ion-col>
                     </ion-row>
                   </ion-grid>  
                   <ion-grid style="padding:10% 15% 0% 0%;overflow:hide;color:#8064a2;" align-items-end>
@@ -159,9 +159,9 @@
                           <ion-col col-5 text-center style="border-width:1px;border-style: none dotted none none;color:#8064a2;font-size:26px;">区间</ion-col>
                           <ion-col text-center style="border-width:1px;border-style: none dotted none none;color:#8064a2;font-size:26px;">接单金额</ion-col>
                           <ion-col text-center style="border-width:1px;border-style: none none none none;color:#8064a2;font-size:26px;">毛利率</ion-col>
-                          <ion-col col-1 style="color:#8064a2;border-width:1px;border-style: none none none none;font-size:26px;"></ion-col>
+                          <ion-col col-1 style="color:#FFF;border-width:1px;border-style: none none none none;font-size:26px;"></ion-col>
                       </ion-row>
-                      <ion-row style="overflow:hide; height: 50px;border-width:1px;border-style: dotted none dotted none;" *ngFor="let rowdata of tablevalues.groupbyareavalues">
+                      <ion-row style="overflow:hide; height: 50px;border-width:1px;border-style: dotted none dotted none;" *ngFor="let rowdata of tablevalues.groupbyareavalues;index as n;">
                           <ion-col col-5 text-center style="border-width:1px;border-style: none dotted none none;color:#8064a2;font-size:26px;">
                               {{rowdata.areaname}}
                           </ion-col>
@@ -171,9 +171,9 @@
                           <ion-col text-center style="border-width:1px;border-style: none none none none;color:#8064a2;font-size:26px;">
                               {{rowdata.grossrate|percent}}
                           </ion-col>
-                          <ion-col col-1 style="color:#8064a2;border-width:1px;border-style: none none none none;font-size:26px;">
-                            <ion-icon name="md-search"></ion-icon>
-                          </ion-col>
+                          <ion-col align-self-center col-1 style="color:#FFF;border-width:1px;border-style: none none none none;font-size:26px;">
+                            <button (click)="OpenDetail(rowdata,n,2)" style="padding:0%;height:40px !important;" color="colorseries3" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
+                        </ion-col>
                       </ion-row>
                     </ion-grid>  
             </ion-card>	    
