--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -111,7 +111,7 @@
                           {{tablevalues.alertvalues.totalunsetpricecount}}
                       </ion-col>
                       <ion-col align-self-center col-1 style="color:#FFF;border-width:1px;border-style: none none none none;font-size:26px;">
-                        <button (click)="OpenDetailForUnTransfer()" style="padding:0%;height:40px !important;" color="colorseries1" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
+                        <button (click)="OpenDetail('',0,0)" style="padding:0%;height:40px !important;" color="colorseries1" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
                       </ion-col>
                   </ion-row>
                   <ion-row style="overflow:hide; height: 50px;border-width:1px;border-style: dotted none dotted none;">
@@ -122,7 +122,7 @@
                           {{tablevalues.alertvalues.totalunsetpricemny|thousands}}
                       </ion-col>
                       <ion-col align-self-center col-1 style="color:#FFF;border-width:1px;border-style: none none none none;font-size:26px;">
-                        <button (click)="OpenDetailForUnTransfer()" style="padding:0%;height:40px !important;" color="colorseries1" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
+                        <button (click)="OpenDetail('',0,0)" style="padding:0%;height:40px !important;" color="colorseries1" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
                       </ion-col>
                   </ion-row>
                 </ion-grid>    
