--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,9 +1,9 @@
 <ion-header>
-    <ion-navbar color="defaultbgcolor" class="bar-positive" align-title="center" #navbar>
+    <ion-navbar color="defaultbgcolor" style="height:80px" class="bar-positive" align-title="center" #navbar>
     <button ion-button menuToggle>
         <ion-icon style="font-size: 50px;" name="menu"></ion-icon>
     </button>
-    <ion-title style="padding:0% 0% 0% 0%;"><p align="center" style="color:white;font-size:60px;">永强集团制造数据中心</p></ion-title> 
+    <ion-title style="padding:0% 0% 0% 0%;"><p align="center" style="color:white;font-size:58px;">永强集团制造数据中心</p></ion-title> 
     <ion-buttons end>
         <button ion-button (click)="ShowMsg()">
             <p align="center" style="color:white;font-size:25px;">单位(万元)&nbsp;&nbsp;</p>
@@ -18,7 +18,7 @@
     <ion-row>
       <ion-col col-9>
           <ion-card class="maincontenttopstyle">
-          <ion-card-content>
+          <ion-card-content style="padding:0%">
             <ion-grid>
               <ion-row>
                 <ion-col>
@@ -46,7 +46,7 @@
                               <ion-col text-center style="border-width:1px;border-style: none dashed none dashed;font-size:23px;">
                                   {{rowdata.groupname}}
                               </ion-col>
-                              <ion-col (click)="OpenGrossModal(rowdata.groupname)" text-center style="color:#9bbb59;border-width:1px;border-style: none dashed none dashed;font-size:23px;">
+                              <ion-col text-center style="color:#9bbb59;border-width:1px;border-style: none dashed none dashed;font-size:23px;">
                                   {{rowdata.sumgross|thousands}}
                               </ion-col>
                             </ion-row>
@@ -79,7 +79,7 @@
                 <ion-grid style="overflow:auto;color:#FFFFFF;" align-items-end>
                     <ion-row style="font-size:25px;overflow:hide; height: 55px;border-width:1px;border-style: none none solid none;">
                       <ion-col></ion-col>
-                      <ion-col align-self-center *ngFor="let header of ManufactureDatas.xAxis[0].data">{{header}}</ion-col>
+                      <ion-col text-center align-self-center *ngFor="let header of ManufactureDatas.xAxis[0].data">{{header}}</ion-col>
                     </ion-row>
                     <ion-row style="overflow:hide; height: 60px;border-width:1px;border-style: none none solid none;" *ngFor="let rowdata of ManufactureDatas.series;index as i;">
                       <ion-col text-left style="font-size:21px;border-width:1px;border-style: none solid none solid;">{{rowdata.name}}</ion-col>
@@ -111,7 +111,7 @@
                           {{tablevalues.alertvalues.totalunsetpricecount}}
                       </ion-col>
                       <ion-col align-self-center col-1 style="color:#FFF;border-width:1px;border-style: none none none none;font-size:26px;">
-                        <button (click)="OpenDetail('',0,0)" style="padding:0%;height:40px !important;" color="colorseries1" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
+                        <button [clear]="true" (click)="OpenDetail('',0,0)" style="padding:0%;height:40px !important;" color="colorseries1" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
                       </ion-col>
                   </ion-row>
                   <ion-row style="overflow:hide; height: 50px;border-width:1px;border-style: dotted none dotted none;">
@@ -122,7 +122,7 @@
                           {{tablevalues.alertvalues.totalunsetpricemny|thousands}}
                       </ion-col>
                       <ion-col align-self-center col-1 style="color:#FFF;border-width:1px;border-style: none none none none;font-size:26px;">
-                        <button (click)="OpenDetail('',0,0)" style="padding:0%;height:40px !important;" color="colorseries1" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
+                        <button [clear]="true" (click)="OpenDetail('',0,0)" style="padding:0%;height:40px !important;" color="colorseries1" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
                       </ion-col>
                   </ion-row>
                 </ion-grid>    
@@ -147,7 +147,7 @@
                             {{rowdata.grossrate|percent}}
                         </ion-col>
                         <ion-col align-self-center col-1 style="color:#FFF;border-width:1px;border-style: none none none none;font-size:26px;">
-                            <button (click)="OpenDetail(rowdata,n,1)" style="padding:0%;height:40px !important;" color="colorseries2" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
+                            <button [clear]="true" (click)="OpenDetail(rowdata,n,1)" style="padding:0%;height:40px !important;" color="colorseries2" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
                         </ion-col>
                     </ion-row>
                   </ion-grid>  
@@ -172,7 +172,7 @@
                               {{rowdata.grossrate|percent}}
                           </ion-col>
                           <ion-col align-self-center col-1 style="color:#FFF;border-width:1px;border-style: none none none none;font-size:26px;">
-                            <button (click)="OpenDetail(rowdata,n,2)" style="padding:0%;height:40px !important;" color="colorseries3" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
+                            <button [clear]="true" (click)="OpenDetail(rowdata,n,2)" style="padding:0%;height:40px !important;" color="colorseries3" ion-button icon-only><ion-icon name="md-search"></ion-icon></button>
                         </ion-col>
                       </ion-row>
                     </ion-grid>  
